Fix findbugs message